<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Messages</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_message">New message</string>
    <string name="title_activity_messages">Messages</string>
    <string name="title_activity_new_message">New message</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_from">From</string>
    <string name="hint_message">Message text</string>
    <string name="button_send_message">Send message</string>
    <string name="button_update_message">Update message</string>
    <string name="button_take_picture">Take picture</string>
    <string name="contextual_menu_delete">Delete</string>
    <string name="contextual_menu_edit">Edit</string>
    <string name="image_upload_in_progress">Uploading image to imgur</string>
    <string name="image_upload_success">Image was uploaded to </string>
    <string name="title_activity_edit_message">Edit message</string>

</resources>
